Fix date/time input overflow with box-sizing border-box

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,19 +105,6 @@
     box-shadow: 0 0 0 3px color-mix(in srgb, var(--color-primary) 12%, transparent);
   }
 
-  input.input-field[type="date"],
-  input.input-field[type="time"] {
-    min-width: 0;
-    width: 100%;
-    max-width: 100%;
-    box-sizing: border-box;
-  }
-
-  input.input-field[type="date"]::-webkit-calendar-picker-indicator,
-  input.input-field[type="time"]::-webkit-calendar-picker-indicator {
-    margin-left: 0;
-  }
-
   .container-app {
     @apply max-w-7xl mx-auto px-8;
   }
@@ -220,8 +207,14 @@
   }
 }
 
-
 input.input-field[type='date'], input.input-field[type='time'] {
-  width: 120px !important;
-  background: yellow !important;
+  width: 100% !important;
+  max-width: 100% !important;
+  min-width: 0 !important;
+  box-sizing: border-box !important;
+}
+
+input.input-field[type='date']::-webkit-calendar-picker-indicator,
+input.input-field[type='time']::-webkit-calendar-picker-indicator {
+  margin-left: 0;
 }
